update witb base

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,2 +1,6 @@
 FROM baseImage
 #Dockersetup will go here
+
+#docs
+# https://docs.docker.com/reference/dockerfile/ references
+# https://docs.docker.com/get-started/docker-concepts/building-images/writing-a-dockerfile/ 
